public/css/screen.css
html, body{
  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
  margin: 0px;
  padding: 0px;
  color: #000;
  /*background: url("/bg.jpeg") no-repeat center center fixed;
  background-size: cover;*/
  background-color: #EFEFEF;
}
a {
  color: #000;
}
.btntext {
  display: none;
}
.btn:hover .btntext {
  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline-block;
}
#top {
  width: 100%;
  backdrop-filter: saturate(180%) blur(20px);
  background-color: rgba(255, 255, 255, 0.7);
  top: 0px;
  padding: 0px;
  margin: 0px;
  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
}
@media only screen and (min-width: 500px) {
  #top {
    position: fixed;
  }
}
#top a {
  color: #000;
}
#toptitle {
  display: inline-block;
  padding: 15px;
  font-size: 1.4em;
  font-weight: 100;
}
#topuser {
  float: right;
  font-weight: 200;
}
#top .btn {
  height: 18px;
  margin: 0px;
  margin-left: 5px;
  display: inline-block;
  padding: 20px;
}
#top .btn:hover {
  padding-left: 10px;
  padding-right: 10px;
  background-color: rgba(255, 255, 255, 0.7);
}
#top .mdi-keyboard-backspace {
  margin-left: 0px;
  float: left;
}

.center {
  text-align: center;
}
input::-webkit-input-placeholder, button {
  font-family: 'roboto', sans-serif;
  -webkit-transition: all 0.3s ease-in-out;
          transition: all 0.3s ease-in-out;
}
form {
  display: inline-block;
  box-sizing: border-box;
  background-color: #FFF;
  width: 260px;
  margin: 70px;
  margin-top: 150px;
  backdrop-filter: saturate(180%) blur(20px);
  background-color: rgba(255, 255, 255, 0.7);
  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
  padding-top: 0px;
  padding-bottom: 40px;
  border-radius: 3px;
}
form h1 {
  margin: 0px;
  margin-bottom: 20px;
  box-sizing: border-box;
  padding: 20px;
}
input {
  margin: 40px 25px;
  width: 200px;
  display: block;
  border: none;
  padding: 10px 0;
  border-bottom: solid 1px #1abc9c;
  -webkit-transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
          transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 96%, #1abc9c 4%);
  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #1abc9c 4%);
  background-position: -200px 0;
  background-size: 200px 100%;
  background-repeat: no-repeat;
  color: #0e6252;
}
input:focus, input:valid {
  box-shadow: none;
  outline: none;
  background-position: 0 0;
}
input:focus::-webkit-input-placeholder, input:valid::-webkit-input-placeholder {
  color: #1abc9c;
  font-size: 11px;
  -webkit-transform: translateY(-20px);
          transform: translateY(-20px);
  visibility: visible !important;
}
button {
  border: none;
  background: #2196F3;
  cursor: pointer;
  border-radius: 3px;
  padding: 6px;
  width: 200px;
  color: white;
  margin: 0px;
  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
}
button:hover {
  -webkit-transform: translateY(-3px);
      -ms-transform: translateY(-3px);
          transform: translateY(-3px);
  box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.2);
}
.subtext{
  margin-top: 20px;
  font-size: 0.8em;
  color: #1abc9c;
}
.subtext a{
  color: #1abc9c;
}

.listmain{
  list-style-type: none;
  margin: 15px;
  margin-top: 70px;
  padding: 0px;
  line-height: 1.5;
  background-color: #FFF;
  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
}
.listmain li{
  height: 3em;
  border-bottom: 1px solid #DDD;
}
.listmain .listlink{
  padding-left: 1em;
  display: inline-block;
  box-sizing: border-box;
}
.listmain .listlink:hover{
  background-color: #B0BEC5;
}
.listmain .listdate{
  display: inline-block;
  float: left;
  line-height: 3;
  width: 100px;
  height: 3em;
}
.listmain .listtitle{
  display: inline-block;
  float: left;
  line-height: 3;
  max-width: 330px;
  height: 3em;
  overflow: hidden;
}
.listmain .listdl{
  float: right;
  margin: 0em;
  padding: 0.5em;
  font-size: 1.5em;
  border-left: 1px solid #DDD;
}
.listmain .listdl:hover{
  background-color: #90A4AE;
}
.listmain .listyear{
  padding-top: 5px;
  padding-left: 17px;
  height: 40px;
  font-size: 1.5em;
  color: #626262;
  background-color: #EBEBEB;
}

.thumblist {
  margin: auto;
  margin-top: 70px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.thumblist::after {
  content: "";
  flex: auto;
}
ul{
  padding: 0px;
}
.thumblist .thumb{
  display: inline-block;
  vertical-align: top;
  
  height: 100px;
  margin: 5px;
  padding: 0px;
  background-color: #FFF;
  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
}

#imageview-container {
  display: none;
  color: #fff;
  font-size: 2em;
  text-align: center;
  background-color: #000;
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  margin: 0px;
}
#imageview-nav {
  height: 40px;
  margin: 10px;
}
#imageview-container i {
  color: #fff;
}
#imageview-pause {
  display: none;
}
#imageview-image {
  max-width: 100%;
  max-height: calc(100% - 60px);
}
.noscroll { 
  overflow: hidden; 
}

